# hackernews-TUI

./: .gitignore  CLAUDE.md  Dockerfile  HN_TIM_IMPROVEMENTS.md  Makefile  README.md  TEST_PLAN.md
config_parser/: Cargo.toml
docs/: config.md  hackernews_tim.1
examples/: config-dark.toml  config.toml  hn-tui-dark.toml  hn-tui.toml
hackernews_tim/: Cargo.toml
hackernews_tim/src/: main.rs  model.rs  reply_editor.rs  utils.rs
hackernews_tim/src/client/: mod.rs  model.rs  query.rs
hackernews_tim/src/config/: init.rs  keybindings.rs  theme.rs
hackernews_tim/src/parser/: article.rs  html.rs
hackernews_tim/src/test_support/: fixtures.rs  mod.rs
hackernews_tim/src/view/: article_view.rs  async_view.rs  comment_view.rs  help_view.rs  link_dialog.rs  login_dialog.rs  mod.rs  result_view.rs  search_view.rs  story_view.rs  utils.rs
hackernews_tim/tests/: article_view.rs  comment_view.rs  e2e_fake_backend_smoke.rs  e2e_first_run.rs  e2e_login.rs  e2e_navigation.rs  e2e_quit_errors.rs  e2e_vote_reply.rs  find_bar.rs  global_navigation.rs  help_view.rs  link_dialog.rs  login_dialog.rs  search_view.rs  story_view.rs
hackernews_tim/tests/e2e/: fakehn.rs  mod.rs
hackernews_tim/tests/fixtures/: README.md  downvoted_comment_page.html  item_page_authenticated.html
hackernews_tim/tests/snapshots/: e2e_login__login_dialog_pty.snap  e2e_navigation__comment_view_after_drilldown_pty.snap  e2e_quit_errors__front_page_http_500_error_view_pty.snap  help_view__article_view_help.snap  help_view__comment_view_help.snap  help_view__default_help.snap  help_view__link_dialog_help.snap  help_view__search_view_help.snap  help_view__story_view_help.snap  link_dialog__dialog_five_links.snap  search_view__initial_state.snap
hackernews_tui/: Cargo.toml
hackernews_tui/src/: main.rs  model.rs  reply_editor.rs
hackernews_tui/src/client/: mod.rs
hackernews_tui/src/config/: init.rs  keybindings.rs  mod.rs  theme.rs
hackernews_tui/src/view/: article_view.rs  async_view.rs  comment_view.rs  find_bar.rs  help_view.rs  login_dialog.rs  mod.rs  search_view.rs  story_view.rs  text_view.rs  utils.rs
hackernews_tui/tests/fixtures/: comment_page.html
