[package]
name = "hackernews_tim"
version = "0.13.5"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Terminal UI to browse Hacker News"
repository = "https://github.com/aome510/hackernews-TUI"
keywords = ["hackernews", "tui"]
readme = "../README.md"
include = ["src/**/*", "LICENSE", "../README.*", "!**/examples/**/*"]

[features]
# Exposes in-memory test doubles (e.g. `client::fake::FakeHnApi`) to
# integration tests under `tests/`. Always available in `cfg(test)` for
# the binary crate's own unit tests.
test-support = []

[dependencies]

# cursive related deps
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
cursive_core = "0.3.7"
cursive-async-view = "0.6.0"
cursive_buffered_backend = "0.6.1"
cursive-aligned-view = "0.6.0"

# html5ever related deps
html5ever = "0.27.0"
markup5ever = "0.12.1"
tendril = "0.4.3"

# internal article view dep
readable-readability = "0.4.0"

# tracing/log related deps
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.22"

# serde related deps
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

# others
ureq = { version = "2.10.0", features = ["json", "cookies"] }
cookie_store = "0.21"
anyhow = "1.0.86"
rayon = "1.10.0"
regex = "1.10.5"
once_cell = "1.19.0"
toml = "1.1.0"
toml_edit = "0.22"
clap = { version = "4.5.8", features = ["string"] }
dirs-next = "2.0.0"
url = "2.5.2"
config_parser2 = { version = "0.1.5", path = "../config_parser" }
crossbeam-channel = "0.5.13"
unicode-width = "0.1.13"
comfy-table = "7.1.1"
html-escape = "0.2.13"
rpassword = "7.3"
keyring = "3"

[dev-dependencies]

# Snapshot testing for view-level rendering. Snapshot files live next
# to integration tests under `hackernews_tim/tests/snapshots/`. Update
# them via `cargo insta review` (preferred) or `INSTA_UPDATE=always`
# during `cargo test`.
insta = { version = "1", features = ["filters"] }

# Phase 3 PTY end-to-end tests (TEST_PLAN.md §3). Linux-only — Windows
# PTY behavior and macOS keyring quirks add flakiness we don't need to
# solve at this tier. Each `tests/e2e_*.rs` binary is gated by a
# top-level `#![cfg(target_os = "linux")]`, so on macOS / Windows the
# binaries compile to empty stubs and these dependencies are not pulled
# in.
[target.'cfg(target_os = "linux")'.dev-dependencies]
portable-pty = "0.8"
vt100 = "0.15"
tempfile = "3"
# Fixture HN backend (TEST_PLAN.md §3.1.2). `wiremock` is async, so the
# `FakeHnServer` helper owns a small `tokio` runtime and uses
# `block_on` from sync test bodies.
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
